sql-server-k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mssql
  labels:
    app: mssql
    environment: production
